[gd_scene load_steps=9 format=1]

[ext_resource path="res://scene/Star.gd" type="Script" id=1]
[ext_resource path="res://image/star_effect.tex" type="Texture" id=2]
[ext_resource path="res://image/star.png" type="Texture" id=3]
[ext_resource path="res://image/start_effect1.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 13.0

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Particles:config/emitting")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }

[sub_resource type="Animation" id=3]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StarEffect1:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 360.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("StarEffect2:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 360.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Star:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 1, 2 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ] }

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 70.0

[node name="Star" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/star_hit = SubResource( 2 )
anims/star_idle = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="StarEffect1" type="Sprite" parent="."]

transform/scale = Vector2( 1.15254, 1.15254 )
texture = ExtResource( 2 )

[node name="StarEffect2" type="Sprite" parent="."]

transform/rot = 360.0
transform/scale = Vector2( 1.14746, 1.14746 )
texture = ExtResource( 2 )

[node name="Star" type="Sprite" parent="."]

transform/pos = Vector2( 0, -5 )
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="VisEnabler" type="VisibilityEnabler2D" parent="."]

rect = Rect2( -100, -100, 200, 200 )
enabler/pause_animations = true
enabler/freeze_bodies = true
enabler/pause_particles = false
enabler/pause_animated_sprites = true
enabler/process_parent = true
enabler/fixed_process_parent = true

[node name="Particles" type="Particles2D" parent="."]

config/amount = 12
config/lifetime = 2.0
config/emit_timeout = 1.0
config/emitting = false
config/half_extents = Vector2( 20, 20 )
config/explosiveness = 0.1
config/texture = ExtResource( 4 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 50.0
params/spin_velocity = 0.0
params/orbit_velocity = 5.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.5
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="DeathClock" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Magnet" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="MagnetCollision" type="CollisionShape2D" parent="Magnet"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="." to="." method="_on_body_enter"]

[connection signal="enter_screen" from="VisEnabler" to="." method="_on_VisEnabler_enter_screen"]

[connection signal="exit_screen" from="VisEnabler" to="." method="_on_VisEnabler_exit_screen"]

[connection signal="timeout" from="DeathClock" to="." method="_on_DeathClock_timeout"]

[connection signal="body_enter" from="Magnet" to="." method="_on_Magnet_body_enter"]

[connection signal="body_exit" from="Magnet" to="." method="_on_Magnet_body_exit"]


